// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SkeletonLine Snapshots No props 1`] = `
<div
  className="sc-bdfBwQ hLTJHd sc-gsTCUz iHwGUN"
/>
`;

exports[`SkeletonLine Snapshots with className 1`] = `
<div
  className="sc-bdfBwQ hLTJHd sc-gsTCUz iHwGUN className"
/>
`;

exports[`SkeletonLine Snapshots with height 1`] = `
<div
  className="sc-bdfBwQ hLTJHd sc-gsTCUz ewPtDd className"
  height={100}
/>
`;

exports[`SkeletonLine Snapshots with width 1`] = `
<div
  className="sc-bdfBwQ hLTJHd sc-gsTCUz ixkdqd className"
  width={100}
/>
`;
